--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a class="nav-link" onclick="fullpage_api.moveTo('clients')">Clients</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="fullpage_api.moveTo('landing')">Press</a>
+            <a class="nav-link" onclick="fullpage_api.moveTo('press')">Press</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" onclick="fullpage_api.moveTo('services')">Services</a>
@@ -85,7 +85,7 @@
                 <a onclick="fullpage_api.moveTo('clients')">Clients</a>
               </li>
               <li>
-                <a onclick="fullpage_api.moveTo('landing')">Press</a>
+                <a onclick="fullpage_api.moveTo('press')">Press</a>
               </li>
               <li>
                 <a onclick="fullpage_api.moveTo('services')">Services</a>
@@ -139,7 +139,7 @@
               <img src="img/word scramble.png" />
               <img src="img/among us.png" />
             </div>
-            <p class="description">View our full portfolio <span style="text-decoration: underline;">here</span>.</p>
+            <p class="description">View our full portfolio <span style="text-decoration: underline;">here</span>.<br>Note: stats displayed on this page only represent Instagram and do not account for the billions of views on other platforms, such as TikTok</p>
           </div>
 
           <div id="work-popup">
@@ -194,6 +194,295 @@
           </div>
         </div>
       </div>
+      <div class="press site-section section">
+        <div class="section-container">
+          <div class="section-info">
+            <h1>Some press.</h1>
+            <div class="press-grid">
+              <div class="press-item" data-link="https://jypsyvloggin.com/how-to-get-slit-scan-filter-on-instagram-by-gu_christopher/">
+                <div class="press-img">
+                  <img src="img/press 28.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">How to get slit scan filter on Instagram</h2>
+                  <h3 class="subtitle">9/26/20</h3>
+                  <h4 class="link">jypsyvloggin.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://jypsyvloggin.com/how-to-get-snow-filter-on-instagram-by-gu_christopher/">
+                <div class="press-img">
+                  <img src="img/press 27.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">How to get Snow Filter on Instagram? By gu_christopher</h2>
+                  <h3 class="subtitle">9/22/20</h3>
+                  <h4 class="link">jypsyvloggin.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://jypsyvloggin.com/how-to-get-how-do-you-pronounce-filter-on-instagram-by-gu_christopher/">
+                <div class="press-img">
+                  <img src="img/press 26.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">How to get How Do You Pronounce Filter on Instagram? By gu_christopher</h2>
+                  <h3 class="subtitle">9/7/20</h3>
+                  <h4 class="link">jypsyvloggin.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.hitc.com/en-gb/2020/07/07/instagram-how-to-use-the-roast-me-filter-time-to-get-cynical/">
+                <div class="press-img">
+                  <img src="img/press 25.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Instagram: How To Use The Roast Me Filter - Time To Get Cynical!</h2>
+                  <h3 class="subtitle">7/24/20</h3>
+                  <h4 class="link">hitc.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.gadgetsnow.com/how-to/guess-the-gibberish-challenge-how-to-get-and-use-this-instagram-filter/articleshow/75429441.cms">
+                <div class="press-img">
+                  <img src="img/press 24.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">How to download and use Guess the Gibberish Instagram filter</h2>
+                  <h3 class="subtitle">7/13/20</h3>
+                  <h4 class="link">gadgetsnow.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.paiweru.com/2020/07/roast-me-filter-instagram-how-to-get.html">
+                <div class="press-img">
+                  <img src="img/press 23.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Roast Me Filter Instagram || How to get roast me filter effect instagram</h2>
+                  <h3 class="subtitle">7/8/20</h3>
+                  <h4 class="link">paiweru.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://manggogresiknews.blogspot.com/2020/07/roast-me-filter-instagram-how-to-get.html">
+                <div class="press-img">
+                  <img src="img/press 22.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Roast me filter instagram | How to get Roast me Instagram Filter</h2>
+                  <h3 class="subtitle">7/8/20</h3>
+                  <h4 class="link">manggogresiknews.blogspot.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://celebpie.com/roast-me-filter-on-instagram-and-tiktok-explained-how-to-use-it/">
+                <div class="press-img">
+                  <img src="img/press 21.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Roast Me Filter On Instagram and TikTok Explained: How To Use It?</h2>
+                  <h3 class="subtitle">7/7/20</h3>
+                  <h4 class="link">celebpie.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.dailymail.co.uk/tvshowbiz/article-8314349/Vanessa-Hudgens-fumbles-challenging-tongue-twisters-tie-dye-sports-bra-up.html">
+                <div class="press-img">
+                  <img src="img/press 20.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Vanessa Hudgens hilariously fumbles through challenging tongue twisters: 'I give up'</h2>
+                  <h3 class="subtitle">5/13/20</h3>
+                  <h4 class="link">dailymail.co.uk</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.india.com/viral/guess-the-gibberish-filter-has-everyone-hooked-creator-shares-story-behind-its-creation-4022821/">
+                <div class="press-img">
+                  <img src="img/press 19.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Guess The Gibberish Filter Has Everyone Hooked, Creator Shares Story Behind Its Creation</h2>
+                  <h3 class="subtitle">5/7/20</h3>
+                  <h4 class="link">india.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://lenslist.co/zoomer/">
+                <div class="press-img">
+                  <img src="img/press 18.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Zoomer</h2>
+                  <h3 class="subtitle">5/5/20</h3>
+                  <h4 class="link">lenslist.co</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://tech.hindustantimes.com/tech/news/guess-the-gibberish-creator-on-hey-are-field-hers-story-nJoYY22egN2LgX6MdlWftL.html">
+                <div class="press-img">
+                  <img src="img/press 17.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Instagram’s Guess the Gibberish creator on ‘Hey are field hers’</h2>
+                  <h3 class="subtitle">5/5/20</h3>
+                  <h4 class="link">tech.hindustantimes.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.nbcnewyork.com/news/local/social-media-challenges-help-break-up-social-distancing-doldrums/2397452/">
+                <div class="press-img">
+                  <img src="img/press 16.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Social Media Challenges Help Break Up Social Distancing Doldrums</h2>
+                  <h3 class="subtitle">5/4/20</h3>
+                  <h4 class="link">nbcnewyork.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.hitc.com/en-gb/2020/04/16/guess-the-gibberish-filter/">
+                <div class="press-img">
+                  <img src="img/press 15.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">How To Get The Guess The Gibberish Filter on Instagram - Actual Brain Power Needed!</h2>
+                  <h3 class="subtitle">4/29/20</h3>
+                  <h4 class="link">hitc.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.indiatoday.in/information/story/instagram-guess-the-gibberish-challenge-how-to-use-this-filter-and-post-story-1672367-2020-04-29">
+                <div class="press-img">
+                  <img src="img/press 14.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Instagram guess the Gibberish challenge: How to use this filter and post story</h2>
+                  <h3 class="subtitle">4/29/20</h3>
+                  <h4 class="link">indiatoday.in</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://indianexpress.com/article/technology/tech-news-technology/guess-the-gibberish-what-is-gibberish-challenge-how-to-use-instagram-tiktok-filter-6379773/">
+                <div class="press-img">
+                  <img src="img/press 13.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Gibberish challenge: How to use this Instagram filter and guess the right answer</h2>
+                  <h3 class="subtitle">4/27/20</h3>
+                  <h4 class="link">indianexpress.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.capitalfm.com/news/guess-the-gibberish-filter-instagram-tiktok/">
+                <div class="press-img">
+                  <img src="img/press 12.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">How To Get The Guess The Gibberish Filter On Instagram & TikTok</h2>
+                  <h3 class="subtitle">4/24/20</h3>
+                  <h4 class="link">capitalfm.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://knowyourmeme.com/memes/guess-the-gibberish">
+                <div class="press-img">
+                  <img src="img/press 11.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Guess The Gibberish</h2>
+                  <h3 class="subtitle">4/23/20</h3>
+                  <h4 class="link">knowyourmeme.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://junkee.com/guess-the-gibberish-fails/251265">
+                <div class="press-img">
+                  <img src="img/press 10.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">People Are Sharing Their Hilarious ‘Guess The Gibberish’ Instagram Filter Fails</h2>
+                  <h3 class="subtitle">4/23/20</h3>
+                  <h4 class="link">junkee.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.standard.co.uk/tech/tik-tok-instagram-filter-gibberish-challenge-a4418896.html">
+                <div class="press-img">
+                  <img src="img/press 9.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">What is the Gibberish Challenge? How to get the Instagram filter and play with friends</h2>
+                  <h3 class="subtitle">4/20/20</h3>
+                  <h4 class="link">standard.co.uk</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.elitedaily.com/p/heres-how-to-get-instagrams-guess-the-gibberish-filter-to-start-decoding-22831226">
+                <div class="press-img">
+                  <img src="img/press 8.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Here's How To Get Instagram's "Guess The Gibberish" Filter To Start Decoding</h2>
+                  <h3 class="subtitle">4/20/20</h3>
+                  <h4 class="link">elitedaily.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://heavy.com/news/2020/04/guess-the-gibberish-instagram-filter/">
+                <div class="press-img">
+                  <img src="img/press 7.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">How to Get the Guess the Gibberish Instagram Filter"</h2>
+                  <h3 class="subtitle">4/17/20</h3>
+                  <h4 class="link">heavy.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.popbuzz.com/internet/social-media/tiktok-gibberish-challenge-filter-instagram/">
+                <div class="press-img">
+                  <img src="img/press 6.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">How to do the Gibberish Challenge filter on TikTok</h2>
+                  <h3 class="subtitle">4/17/20</h3>
+                  <h4 class="link">popbuzz.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="http://www.snapfont.com/which-dog-breed-are-you-instagram-filter/">
+                <div class="press-img">
+                  <img src="img/press 5.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Which Dog Breed Are You Instagram Filter</h2>
+                  <h3 class="subtitle">2/8/20</h3>
+                  <h4 class="link">snapfont.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.engadget.com/2020-02-03-which-pokemon-are-you-instagram-filters-explained.html">
+                <div class="press-img">
+                  <img src="img/press 4.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Why are we obsessed with Instagram's ‘What are you?’ filters?</h2>
+                  <h3 class="subtitle">2/3/20</h3>
+                  <h4 class="link">engadget.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://sg.news.yahoo.com/2020-02-03-which-pokemon-are-you-instagram-filters-explained.html">
+                <div class="press-img">
+                  <img src="img/press 3.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Why are we obsessed with Instagram's ‘What are you?’ filters?</h2>
+                  <h3 class="subtitle">2/3/20</h3>
+                  <h4 class="link">news.yahoo.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://jypsyvloggin.com/instagram-filters-by-gu-christopher/">
+                <div class="press-img">
+                  <img src="img/press 2.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Get Your Hands on Popular Instagram Filters by Following AR Creator: gu_christopher</h2>
+                  <h3 class="subtitle">1/23/20</h3>
+                  <h4 class="link">jypsyvloggin.com</h4>
+                </div>
+              </div>
+              <div class="press-item" data-link="https://www.elitedaily.com/p/heres-how-to-get-the-which-dog-instagram-story-filter-to-match-with-a-pup-21736496">
+                <div class="press-img">
+                  <img src="img/press 1.png">
+                </div>
+                <div class="press-text">
+                  <h2 class="title">Here's How To Get The "Which Dog" Instagram Story Filter To Match With A Pup</h2>
+                  <h3 class="subtitle">1/22/20</h3>
+                  <h4 class="link">elitedaily.com</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="services site-section section">
         <div class="section-container">
           <div class="section-info">
@@ -219,11 +508,11 @@
         <div class="section-container">
           <div class="section-info">
             <h1>Get in touch.</h1>
-            <form>
-              <input placeholder="Name*">
-              <input placeholder="Email*">
-              <textarea placeholder="Message*"></textarea>
-              <button>Submit</button>
+            <form id="contact-form">
+              <input id="name-input" placeholder="Name*" required>
+              <input id="email-input" placeholder="Email*" required>
+              <textarea id="message-input" placeholder="Message*" required></textarea>
+              <button id="submit">Submit</button>
             </form>
           </div>
         </div>
