--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="press-text">
                   <h2 class="title">Roast me filter instagram | How to get Roast me Instagram Filter</h2>
                   <h3 class="subtitle">7/8/20</h3>
-                  <h4 class="link">manggogresiknews.blogspot.com</h4>
+                  <h4 class="link">manggogresiknews.<wbr>blogspot.<wbr>com</h4>
                 </div>
               </div>
               <div class="press-item" data-link="https://celebpie.com/roast-me-filter-on-instagram-and-tiktok-explained-how-to-use-it/">
@@ -512,8 +512,27 @@
               <input id="name-input" placeholder="Name*" required>
               <input id="email-input" placeholder="Email*" required>
               <textarea id="message-input" placeholder="Message*" required></textarea>
-              <button id="submit">Submit</button>
+              <div class="buttons">
+                <button id="submit">Submit</button>
+                <div class="social-icons">
+                  <a href="https://www.instagram.com/gu_christopher/" target="_blank">
+                    <img src="img/socials_instagram.png" />
+                  </a>
+                  <a href="https://www.linkedin.com/in/christopherlgu/" target="_blank">
+                    <img src="img/socials_linkedin.png" />
+                  </a>
+                  <a href="https://www.tiktok.com/@gu_christopher" target="_blank">
+                    <img src="img/socials_tiktok.png" />
+                  </a>
+                  <a href="https://twitter.com/gu_christopher" target="_blank">
+                    <img src="img/socials_twitter.png" />
+                  </a>
+                </div>
+              </div>
             </form>
+          </div>
+          <div class="footer">
+            <p>&copy;2021 Stell-AR</p>
           </div>
         </div>
       </div>
