--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             <div class="content">
               <div class="data">
-                <h1 class="title">default</h1>
+                <h1 class="title"></h1>
                 <div class="data-grid">
                   <div class="data-grid-item">
                     <h3 class="impressions"></h3>
