--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <img src="img/word scramble.png" />
               <img src="img/among us.png" />
             </div>
-            <p class="description">View our full portfolio <span style="text-decoration: underline;">here</span>.<br>Note: stats displayed on this page only represent Instagram and do not account for the billions of views on other platforms, such as TikTok</p>
+            <p class="description">View our full portfolio <span style="text-decoration: underline;"><a href="https://www.facebook.com/sparkarhub/portfolios/300116188023130" target="_blank" style="color: #999999;">here</a></span>.<br>Note: stats displayed on this page only represent Instagram and do not account for the billions of views on other platforms, such as TikTok</p>
           </div>
 
           <div id="work-popup">
